<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gezelbom.MainActivity" >

    <TextView
        android:id="@+id/textViewFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/found" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewFound"
        android:layout_alignStart="@+id/textViewFound"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/buttonStart"
        android:layout_marginTop="16dp"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" >

    </ListView>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/list"
        android:layout_below="@+id/textViewFound"
        android:layout_marginTop="34dp"
        android:onClick="startCounting"
        android:text="@string/start" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@android:id/list"
        android:layout_toRightOf="@+id/buttonStart"
        android:layout_toEndOf="@+id/buttonStart"
        android:onClick="stopCounting"
        android:text="@string/stop" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonShow"
        android:layout_toRightOf="@+id/buttonStop"
        android:layout_toEndOf="@+id/buttonStop"
        android:onClick="dropTable"
        android:text="@string/drop" />

    <Button
        android:id="@+id/buttonShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@android:id/list"
        android:layout_toRightOf="@+id/button1"
        android:layout_toEndOf="@+id/button1"
        android:onClick="show"
        android:text="@string/show" />

    <TextView
        android:id="@+id/TextViewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textViewFound"
        android:layout_alignBottom="@+id/textViewFound"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:text="@string/count" />

    <TextView
        android:id="@+id/textViewCol3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonShow"
        android:layout_alignEnd="@+id/buttonShow"
        android:layout_below="@+id/buttonShow"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewCol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonStop"
        android:layout_alignStart="@+id/buttonStop"
        android:layout_below="@+id/buttonStop"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:text="@string/value"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewCol1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonStart"
        android:layout_alignStart="@+id/buttonStart"
        android:layout_below="@+id/buttonStart"
        android:text="@string/row"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>